--- a/속미인곡.html
+++ b/속미인곡.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./index.css"></head>
 <body>
 <pre>
-<span class='showing'>뎨</span><span class='box'><span class='showed'>저기</span></span>가ᄂᆞᆫ뎌각시본듯도<span class='showing'>ᄒᆞᆫ뎌이고</span><span class='box'><span class='showed'>하구나</span></span>
+<span class='showing'>뎨</span><span class='showed'>저기</span>가ᄂᆞᆫ뎌각시본듯도<span class='showing'>ᄒᆞᆫ뎌이고</span><span class='showed'>하구나</span>
 天上白玉京을엇디ᄒᆞ야離別ᄒᆞ고
 ᄒᆡ다져믄날의눌을보라가시ᄂᆞᆫ고
 
